# learn-cmake

./: .gitignore  CMakeLists.txt  data.h  index.cpp  main.cpp  new.h  readme.md  test.cpp
demo/: CMakeLists.txt  main.cpp  test.cpp  test.h
dll/: CMakeLists.txt  android.sh  dll.cpp  dll.h  ndk.sh
lib/: CMakeLists.txt  lib.cpp  lib.h
prebuilt/: CMakeLists.txt  dll.lib
